--- a/style.css
+++ b/style.css
@@ -360,3 +360,33 @@ footer {
   }
 
 }
+
+@media (max-width: 430px) {
+  .searchdomain-container input[type="text"] {
+    width: 90%;
+  }
+
+  .contact-container input,
+  .contact-container textarea {
+    width: 50%;
+    margin: 10px 0;
+  }
+
+  .contact-container textarea {
+    position: relative;
+    height: 100px;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%);
+  }
+
+  .btn-item{
+    padding: 10px 10px;
+    margin-left: 0;
+  }
+
+  .contact{
+  display: none;
+}
+
+  }
